fixed z-index for signup overlay

--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,7 @@ input:focus {
   gap: 32px;
   box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
   align-items: center;
+  z-index: 100;
 }
 
 .signUp h2 {
